[package]
name = "percent-face"
version = "0.1.0"
edition = "2021"
description = "Pure Rust facial landmark detection using Ensemble of Regression Trees (ERT)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bzip2 = "0.5"

[[bin]]
name = "test_load"
path = "src/bin/test_load.rs"

[dev-dependencies]
image = "0.25"
